2013-10-10  Sean Keys <skeys@ipdatasys.com>

	* tc-xgate.c (xgate_find_match): Refactor opcode matching.

2013-10-10  Jan Beulich <jbeulich@suse.com>

	* tc-i386-intel.c (i386_intel_simplify_register): Suppress base/index
	swapping for bndmk, bndldx, and bndstx.

2013-10-09  Nick Clifton  <nickc@redhat.com>

	PR gas/16025
	* config/tc-epiphany.c (md_convert_frag): Add missing break
	statement.

	PR gas/16026
	* config/tc-mn10200.c (md_convert_frag): Add missing break
	statement.

2013-10-08  Jan Beulich <jbeulich@suse.com>

	* tc-i386.c (check_word_reg): Remove misplaced "else".
	(check_long_reg): Restore symmetry with check_word_reg.

2013-10-08  Jan Beulich <jbeulich@suse.com>

	* gas/config/tc-arm.c (do_t_push_pop): Honor inst.size_req. Simplify
	LR/PC check.

2013-10-08  Nick Clifton  <nickc@redhat.com>

	* config/tc-msp430.c (msp430_operands): Accept "<foo>.a" as an alias
	for "<foo>a".  Issue error messages for unrecognised or corrrupt
	size extensions.

2013-10-04  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/tc-arm.c (do_t_mvn_tst): Use narrow form for tst when
	possible.

2013-09-30  Saravanan Ekanathan <saravanan.ekanathan@amd.com>

	* config/tc-i386.c (cpu_arch): Add CPU_BDVER4_FLAGS.
	* doc/c-i386.texi: Add -march=bdver4 option.

2013-09-20  Alan Modra  <amodra@gmail.com>

	* configure: Regenerate.

2013-09-18  Tristan Gingold  <gingold@adacore.com>

	* NEWS: Add marker for 2.24.

2013-09-18  Nick Clifton  <nickc@redhat.com>

	* config/tc-msp430.c (OPTION_MOVE_DATA): Define.
	(move_data): New variable.
	(md_parse_option): Parse -md.
	(msp430_section): New function.  Catch references to the .bss or
	.data sections and generate a special symbol for use by the libcrt
	library.
	(md_pseudo_table): Intercept .section directives.
	(md_longopt): Add -md
	(md_show_usage): Likewise.
	(msp430_operands): Generate a warning message if a NOP is inserted
	into the instruction stream.
	* doc/c-msp430.texi (node MSP430 Options): Document -md option.
