@@ -1,3 +1,8 @@
+2013-10-13  Sandra Loosemore  <sandra@codesourcery.com>
+
+	* config/tc-nios2.c (nios2_consume_arg): Make the "ba" warning
+	also test/refer to "sstatus".  Reformat the warning message.
+
 2013-10-10  Sean Keys <skeys@ipdatasys.com>
 
 	* tc-xgate.c (xgate_find_match): Refactor opcode matching.
